# fileserv

./: fileserv.cabal  g  g_real  make_cgi  run
src/: Chess.hs  Dopost.hs  Getpost.hs  Main.hs  Util.hs
src/HTTP/: FileServe.hs
src/old/: Main.hs
