name:           fileserv
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       <syn>
build-type:     Simple
build-depends:  base, haskell98, containers, xhtml, filepath, directory, HAppS-Server, mtl, bytestring, old-time, hslogger, old-locale, network

executable:     fileserv
main-is:        Main.hs
hs-source-dirs: src
